gui_check.txt
    Checking gui v0.1.0 (C:\Users\hayate\projects\phybkc\crates\gui)
warning: unused import: `std::sync::Arc`
 --> crates\gui\src\main.rs:3:5
  |
3 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0782]: expected a type, found a trait
  --> crates\gui\src\main.rs:10:11
   |
10 |         ..Default::native_options()
   |           ^^^^^^^
   |
help: you can add the `dyn` keyword if you want a trait object
   |
10 |         ..<dyn Default>::native_options()
   |           ++++        +

warning: variable does not need to be mutable
   --> crates\gui\src\main.rs:204:9
    |
204 |     let mut fonts = egui::FontDefinitions::default();
    |         ----^^^^^
    |         |
    |         help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0782`.
warning: `gui` (bin "gui") generated 2 warnings
error: could not compile `gui` (bin "gui") due to 1 previous error; 2 warnings emitted
